flat fix submenuwrap

--- a/design/openpa_flat/scss/flat/_responsive.scss
+++ b/design/openpa_flat/scss/flat/_responsive.scss
@@ -102,11 +102,6 @@
   }
 }
 @media only screen and (max-width: 992px){
-  .sub_menu_wrap {
-    &.items-6{
-      left: -$submenu_item_width;
-    }
-  }
   h1 > b{
     line-height: 1em;
   }
@@ -215,6 +210,7 @@
     }
     &.items-6{
       width: $submenu_item_width * 5;
+      left: -$submenu_item_width;
       .sub_menu-item{
         width: $submenu_item_width - 40px;
       }
