--- a/design/openpa_flat/stylesheets/app_2.css
+++ b/design/openpa_flat/stylesheets/app_2.css
@@ -905,8 +905,7 @@ body { font: 300 14px/21px 'Roboto', 'sans-serif'; background: #232830; letter-s
   .m_md_bottom_5 { margin-bottom: 5px; }
   .m_md_bottom_15 { margin-bottom: 15px; }
   [class*="animate_"]:not(#go_to_top) { -webkit-transform: translate(0px); -moz-transform: translate(0px); -o-transform: translate(0px); -ms-transform: translate(0px); transform: translate(0px); -webkit-animation: none; -moz-animation: none; -o-animation: none; -ms-animation: none; animation: none; opacity: 1; visibility: visible; } }
-@media only screen and (max-width: 992px) { .sub_menu_wrap.items-6 { left: -180px; }
-  h1 > b { line-height: 1em; }
+@media only screen and (max-width: 992px) { h1 > b { line-height: 1em; }
   [role="navigation"] { position: relative; z-index: 192; }
   .p_sm_right_0 { padding-right: 0; }
   .w_sm_auto, .s_form_wrap { width: auto !important; }
@@ -938,7 +937,7 @@ body { font: 300 14px/21px 'Roboto', 'sans-serif'; background: #232830; letter-s
   .sub_menu_wrap.items-3 { width: 560px; }
   .sub_menu_wrap.items-4 { width: 740px; }
   .sub_menu_wrap.items-5 { width: 920px; }
-  .sub_menu_wrap.items-6 { width: 900px; }
+  .sub_menu_wrap.items-6 { width: 900px; left: -180px; }
   .sub_menu_wrap.items-6 .sub_menu-item { width: 140px; } }
 @media only screen and (max-width: 768px) { .h_bot_part { padding-top: 15px; padding-bottom: 15px; }
   .menu_wrap { background: transparent; }
